--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-coffee-make",
-  "version": "0.0.0",
-  "description": "Yeoman generator",
+  "version": "0.0.1",
+  "description": "Yeoman generator for a CoffeeScript unix app",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "kba/generator-coffee-make",
@@ -14,14 +14,16 @@
     "test": "mocha"
   },
   "files": [
-    "generators"
+    "generators/app"
   ],
   "keywords": [
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
+    "github": "^0.2.4",
+    "mkdirp": "^0.5.1",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
